# Merlin

./: CMakeLists.txt  Merlin.dox  README.md
config/: MerlinConfig.h.in
examples/: CMakeLists.txt  Coupling.cpp  ForwardFID.cpp  Interference.cpp  KV0-3loops.cpp  KernelAligner.cpp  KernelV0-2.cpp  KernelV0.cpp  ModelAligner.cpp  plotkernel.py  plotkerneldiff.py
include/: Coupling.h  DataFID.h  ForwardFID.h  KernelV0.h  LayeredEarthMR.h  LoopInteractions.h  Merlin  MerlinObject.h
python/: CMakeLists.txt  pyMerlin.cpp
src/: .KernelV0.cpp.swp  CMakeLists.txt  Coupling.cpp  DataFID.cpp  ForwardFID.cpp  KernelV0.cpp  LayeredEarthMR.cpp  LoopInteractions.cpp  MerlinObject.cpp
